--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,7 @@ navigationCompose = "2.8.5"
 ksp = "2.0.21-1.0.25"
 koin = "4.0.0"
 kotlinxSerializationJson = "1.7.3"
+timber = "5.0.1"
 
 
 [libraries]
@@ -49,6 +50,7 @@ koin-core = { group = "io.insert-koin", name = "koin-core", version.ref = "koin"
 kotlinx-coroutines-guava = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-guava", version.ref = "kotlinxCoroutinesGuava" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
 
+timber = { module = "com.jakewharton.timber:timber", version.ref = "timber" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
