feat: Migrate DI from Koin to Hilt due to Media3 compatibility issues
                            - Replaced Koin dependency injection with Hilt for better compatibility with Media3.
                            - Updated dependency setup in build.gradle.kts and libs.versions.toml.
                            - Refactored ViewModels and modules to support Hilt annotations.
                            - Removed Koin dependencies and related configuration.

                            This migration resolves issues caused by Media3 integration with Koin.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+
+    <!-- Permissions -->
     <uses-permission android:name="android.permission.READ_MEDIA_AUDIO" />
     <uses-permission
         android:name="android.permission.READ_EXTERNAL_STORAGE"
         android:maxSdkVersion="32" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MEDIA_PLAYBACK" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
 
     <application
         android:name=".MusicVibeApplication"
@@ -21,16 +23,17 @@
         android:theme="@style/Theme.MusicVibe"
         tools:targetApi="31">
 
+        <!-- Media Playback Service -->
         <service
             android:name=".data.player.MediaPlayBackService"
             android:exported="false"
-            android:foregroundServiceType="mediaPlayback"
-            tools:ignore="ForegroundServicePermission">
+            android:foregroundServiceType="mediaPlayback">
             <intent-filter>
                 <action android:name="androidx.media3.session.MediaSessionService" />
             </intent-filter>
         </service>
 
+        <!-- Main Activity -->
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -38,7 +41,6 @@
             android:theme="@style/Theme.MusicVibe">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
